fix(tmux): use custom status bar

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -39,6 +39,21 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
-source "/usr/share/tmux/powerline.conf"
+# status line
+YELLOW="#dff700"
+set -g status-left-length 60
+set -g status-left-style default
+set -g status-bg '#0F1621'
+set -g status-fg '#ff0446'
+set -g status-left "#{?client_prefix,#[reverse],#[session_name]} #S #[fg=YELLOW,bg=default] "
+set -g status-right ''
+# Set the inactive window color and style
+set -g window-status-style fg=default,bg=default
+set -g window-status-format ' #I #W '
+
+# Set the active window color and style
+set -g window-status-current-style fg='#ffffff',bg=default
+set -g window-status-current-format ' #I #W '
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
