--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2,7 +2,7 @@ font_family FiraCode-Retina
 bold_font FiraCode-Bold
 italic_font FiraCode-Light
 bold_italic_font FiraCode-SemiBold
-font_size 13.0
+font_size 11.0
 disable_ligatures never
 font_features FiraCode-Retina +zero +onum
 
@@ -14,7 +14,7 @@ cursor_blink_interval 0.5
 open_url_with default
 url_prefixes http https
 detect_urls yes
-copy_on_select no
+copy_on_select yes
 
 enable_audio_bell no
 
