feat(kitty): update font

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,10 +1,10 @@
-font_family FiraCode-Retina
-bold_font FiraCode-Bold
-italic_font FiraCode-Light
-bold_italic_font FiraCode-SemiBold
-font_size 11.0
+font_family FiraCode Nerd Font Mono Retina
+bold_font FiraCode Nerd Font Mono Bold
+italic_font FiraCode Nerd Font Mono Light
+bold_italic_font FiraCode Nerd Font Mono SemiBold
+font_size 13.0
 disable_ligatures never
-font_features FiraCode-Retina +zero +onum
+font_features FiraCode Nerd Font Mono Retina +zero +onum
 
 cursor #dff700
 cursor_text_color #111111
@@ -22,7 +22,7 @@ foreground #eeeeee
 background #121a27
 background_opacity 0.75
 
-editor nvim
+editor /opt/homebrew/bin/nvim
 
 map ctrl+shift+c copy_to_clipboard
 map ctrl+shift+c copy_to_clipboard
