chore(kitty): font-size and decorations
Signed-off-by: Christophe Augello <caugello@redhat.com>

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2,7 +2,7 @@ font_family FiraCode Nerd Font Mono Retina
 bold_font FiraCode Nerd Font Mono Bold
 italic_font FiraCode Nerd Font Mono Light
 bold_italic_font FiraCode Nerd Font Mono SemiBold
-font_size 13.0
+font_size 16.0
 disable_ligatures never
 font_features FiraCode Nerd Font Mono Retina +zero +onum
 
@@ -15,6 +15,7 @@ open_url_with default
 url_prefixes http https
 detect_urls yes
 copy_on_select yes
+hide_window_decorations yes
 
 enable_audio_bell no
 
