chore(tmux): plugin vim-tmux-navigator
Signed-off-by: Christophe Augello <caugello@redhat.com>

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,8 @@
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
+
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Thanks => https://gist.github.com/tsl0922/d79fc1f8097dde660b34
 # use C-a, since it's on the home row and easier to hit than C-b
